[gd_scene load_steps=7 format=3 uid="uid://b6kpi1drj1rm4"]

[ext_resource type="Texture2D" uid="uid://cnutlf7tgjk4k" path="res://assets/button normal.png" id="1_2cno0"]
[ext_resource type="Texture2D" uid="uid://dbkg5x6alhme" path="res://assets/Risen.png" id="1_2kdal"]
[ext_resource type="Script" path="res://Scenes/start_menu.gd" id="1_8k1ap"]
[ext_resource type="Texture2D" uid="uid://kokvtdqpgus2" path="res://assets/button click.png" id="2_4i26q"]
[ext_resource type="Texture2D" uid="uid://b53pt5srf7qot" path="res://assets/button hover.png" id="3_u6l4v"]
[ext_resource type="AudioStream" uid="uid://ced15mc6xlvh1" path="res://assets/Music and sounds/Patreon Goal Reward Loops - Track 04.wav" id="6_vkl8o"]

[node name="Start menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8k1ap")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 271.0
offset_top = -35.0
offset_right = 571.0
offset_bottom = 165.0
grow_horizontal = 2
texture = ExtResource("1_2kdal")

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 375.0
offset_top = 125.0
offset_right = 475.0
offset_bottom = 175.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Main/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Start
"

[node name="OptionsButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 375.0
offset_top = 195.0
offset_right = 475.0
offset_bottom = 245.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Main/OptionsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -13.0
offset_right = 31.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Options
"

[node name="CreditsButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 375.0
offset_top = 265.0
offset_right = 475.0
offset_bottom = 315.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Main/CreditsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -13.0
offset_right = 27.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits
"

[node name="ExitButton" type="TextureButton" parent="Main"]
layout_mode = 0
offset_left = 375.0
offset_top = 335.0
offset_right = 475.0
offset_bottom = 385.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Main/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="Options" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mutebutton" type="TextureButton" parent="Options"]
layout_mode = 0
offset_left = 375.0
offset_top = 125.0
offset_right = 475.0
offset_bottom = 175.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Options/Mutebutton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Mute Music"

[node name="MuteSoundButton" type="TextureButton" parent="Options"]
layout_mode = 0
offset_left = 375.0
offset_top = 195.0
offset_right = 475.0
offset_bottom = 245.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Options/MuteSoundButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -13.0
offset_right = 31.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Mute Sound"

[node name="CreditsButton" type="TextureButton" parent="Options"]
layout_mode = 0
offset_left = 375.0
offset_top = 265.0
offset_right = 475.0
offset_bottom = 315.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Options/CreditsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -13.0
offset_right = 27.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits
"

[node name="OptionsBackButton" type="TextureButton" parent="Options"]
layout_mode = 0
offset_left = 375.0
offset_top = 335.0
offset_right = 475.0
offset_bottom = 385.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Options/OptionsBackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="Credit" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CreditsBackButton" type="TextureButton" parent="Credit"]
layout_mode = 0
offset_left = 375.0
offset_top = 335.0
offset_right = 475.0
offset_bottom = 385.0
texture_normal = ExtResource("1_2cno0")
texture_pressed = ExtResource("2_4i26q")
texture_hover = ExtResource("3_u6l4v")

[node name="Label" type="Label" parent="Credit/CreditsBackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vkl8o")
volume_db = -10.0

[connection signal="pressed" from="Main/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Main/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Main/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Options/Mutebutton" to="." method="_on_mutebutton_pressed"]
[connection signal="pressed" from="Options/MuteSoundButton" to="." method="_on_mute_sound_button_pressed"]
[connection signal="pressed" from="Options/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Options/OptionsBackButton" to="." method="_on_options_back_button_pressed"]
[connection signal="pressed" from="Credit/CreditsBackButton" to="." method="_on_credits_back_button_pressed"]
